# bar-rl

./: .gitignore  README.md
.github/workflows/: detect-new-version.yml  smoke-test.yml
launcher/: bar-replays.py
wasm/: .gitignore  README.md
wasm/docker/: Dockerfile.native
wasm/docs/: SESSION_LOG.md  WASM_PORT_NOTES.md  desync-hunt-2026-04.md
wasm/patches/: 001-cmake-emscripten-shims.patch  002-streflop-emscripten-undef.patch  003-streflop-strip-cmath-include.patch  004-cob-portable-short-cast.patch
wasm/scripts/: capture.sh  compare-outcomes.py  consistency-check.sh  desync-quick-browser.mjs  desync-quick.py  diff-probe.py  diff-traces.py  fetch-replays.py  live-smoke-test.mjs  native-build.sh  native-configure.sh  native-docker-build-tag.sh  native-docker-build.sh  native-docker-run-tag.sh  native-docker-run.sh  pages-build.sh  pages-deploy.sh  pages-headers  pages-index.html  repro-firefox.mjs  repro-instantiation-bug.mjs  run-modularized-wasm.mjs  screenshot-diag.mjs  screenshot-trace3d.mjs  serve-viewer.sh  serve.py  short-cast-test.cpp  smoke-test-browser-build.mjs  spotcheck-pages.mjs  sqrt-bits-test.cpp  sse-paths-test.cpp  streflop-bits-test.cpp  streflop-determinism-test.cpp  wasm-build.sh  wasm-configure-browser.sh  wasm-configure-tag.sh  wasm-configure.sh  wasm-env.sh  wasm-run-tag.sh  wasm-run.sh
wasm/stubs/cmake/: FindEXPAT.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindSDL2.cmake  FindZLIB.cmake
wasm/stubs/devil/: CMakeLists.txt
wasm/stubs/devil/include/IL/: il.h  ilu.h
wasm/stubs/devil/src/: il_stub.c
wasm/stubs/pr-downloader/: CMakeLists.txt  pr_downloader_stub.cpp
wasm/viewer/: _headers  cf-worker-demo-proxy.js  engine.html  icons.json  index.html  trace3d.html
wasm/widgets/: probe_dumpstate.lua  probe_interactions.lua  probe_outcome.lua  probe_unit_motion.lua  state_dump.lua
